# game

./: Cargo.toml  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  rust-build.yaml
assets/: theappxr_Floor_2.glb
bevy-fps-counter/: Cargo.toml  LICENSE  README.md
bevy-fps-counter/src/: lib.rs
src/: common.rs  lib.rs  main.rs  networking.rs  plugins.rs  state.rs  ui.rs  world.rs
src/common/: input.rs  state.rs
src/networking/: client.rs  constants.rs  protocol.rs  server.rs
src/plugins/: camera.rs  debug.rs  ground_sample.rs  mod.rs  movement.rs  physics.rs  player.rs  print.rs  scene.rs  ui.rs  world.rs
src/ui/: menu.rs  shared.rs  ui.rs
src/ui/components/: button.rs
src/world/: chunk.rs  setup.rs
