[package]
name = "game"
version = "0.1.0"
edition = "2024"
default-run = "game"

[dependencies]

bevy = { version = "0.16.1", features = ["dynamic_linking"] }
regex = "1.11.2"
tokio = { version = "1.47.1", features = ["full"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
